// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Info component it should show frontend info successfully: version-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  data-testid="version-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
  style="width: 100%; height: 100%;"
>
  <div
    class="MuiBox-root css-c4dei4"
  >
    <div
      class="MuiBox-root css-1c0x74f"
      data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-10wel8w-MuiTypography-root"
      >
        Frontend
      </h6>
      <div
        class="MuiBox-root css-1w00lo4"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            Date
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            fooFrontend
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            Version
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            barFrontend
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            Build Number
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            bazFrontend
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            GIT SHA
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            gooFrontend
          </p>
        </div>
      </div>
    </div>
    <div
      class="MuiBox-root css-1c0x74f"
      data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-10wel8w-MuiTypography-root"
      >
        Backend
      </h6>
      <div
        class="MuiBox-root css-1w00lo4"
      >
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            Date
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            fooBackend
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            Version
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            barBackend
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            Build Number
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            bazBackend
          </p>
        </div>
        <div
          class="MuiBox-root css-0"
        >
          <h6
            class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
          >
            GIT SHA
          </h6>
          <p
            class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
          >
            gooBackend
          </p>
        </div>
      </div>
    </div>
  </div>
  <div
    class="MuiBox-root css-opia2v"
    data-testid="feedback-button-container-31d2b110-8308-4035-90a6-519e89e7f6fa"
  >
     
    <button
      class="MuiButtonBase-root MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation MuiButton-root MuiButton-contained MuiButton-containedPrimary MuiButton-sizeMedium MuiButton-containedSizeMedium MuiButton-colorPrimary MuiButton-disableElevation css-fph7a5-MuiButtonBase-root-MuiButton-root"
      data-testid="feedback-button-31d2b110-8308-4035-90a6-519e89e7f6fa"
      tabindex="0"
      title="Report a bug."
      type="button"
    >
      <span
        class="MuiButton-icon MuiButton-startIcon MuiButton-iconSizeMedium css-1d6wzja-MuiButton-startIcon"
      >
        <svg
          aria-hidden="true"
          class="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-etbowg-MuiSvgIcon-root"
          data-testid="feedback-icon-31d2b110-8308-4035-90a6-519e89e7f6fa"
          focusable="false"
          viewBox="0 0 24 24"
        >
          <path
            d="M20 8h-2.81c-.45-.78-1.07-1.45-1.82-1.96L17 4.41 15.59 3l-2.17 2.17C12.96 5.06 12.49 5 12 5c-.49 0-.96.06-1.41.17L8.41 3 7 4.41l1.62 1.63C7.88 6.55 7.26 7.22 6.81 8H4v2h2.09c-.05.33-.09.66-.09 1v1H4v2h2v1c0 .34.04.67.09 1H4v2h2.81c1.04 1.79 2.97 3 5.19 3s4.15-1.21 5.19-3H20v-2h-2.09c.05-.33.09-.66.09-1v-1h2v-2h-2v-1c0-.34-.04-.67-.09-1H20zm-6 8h-4v-2h4zm0-4h-4v-2h4z"
          />
        </svg>
      </span>
      Report a bug
      <span
        class="MuiTouchRipple-root css-8je8zh-MuiTouchRipple-root"
      />
    </button>
  </div>
</div>
`;

exports[`Testing Info component it should show frontend info successfully: version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  class="MuiBox-root css-1c0x74f"
  data-testid="version-backend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-10wel8w-MuiTypography-root"
  >
    Backend
  </h6>
  <div
    class="MuiBox-root css-1w00lo4"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        Date
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        fooBackend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        Version
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        barBackend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        Build Number
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        bazBackend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        GIT SHA
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        gooBackend
      </p>
    </div>
  </div>
</div>
`;

exports[`Testing Info component it should show frontend info successfully: version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc 1`] = `
<div
  class="MuiBox-root css-1c0x74f"
  data-testid="version-frontend-37d307ae-4f1e-4d8d-bafe-fd642f8af4dc"
>
  <h6
    class="MuiTypography-root MuiTypography-h6 css-10wel8w-MuiTypography-root"
  >
    Frontend
  </h6>
  <div
    class="MuiBox-root css-1w00lo4"
  >
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        Date
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        fooFrontend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        Version
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        barFrontend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        Build Number
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        bazFrontend
      </p>
    </div>
    <div
      class="MuiBox-root css-0"
    >
      <h6
        class="MuiTypography-root MuiTypography-h6 css-cdd9aw-MuiTypography-root"
      >
        GIT SHA
      </h6>
      <p
        class="MuiTypography-root MuiTypography-body1 css-1czz4sp-MuiTypography-root"
      >
        gooFrontend
      </p>
    </div>
  </div>
</div>
`;
